Convert CRB-2S to use the new MDIO write config options
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125781 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/normal-boot/crb-2s/default.cfg
+++ b/normal-boot/crb-2s/default.cfg
@@ -85,3 +85,32 @@ BGX.ENABLE.N0.BGX0.P3=0
 BGX.ENABLE.N1.BGX0.P1=0
 BGX.ENABLE.N1.BGX0.P2=0
 BGX.ENABLE.N1.BGX0.P3=0
+
+# MDIO write format:
+# clause,node,bus_id,phy_id,device,location,val
+# clause = MDIO clause for the write (22 or 45)
+# node = ThunderX node the MDIO bus is connected, -1 for local
+# bus_id = ThunderX MDIO bus to use
+# phy_id = MDIO address
+# device = Clause 45 internal device address, zero for clause 22
+# location = MDIO register
+# val = Value to write
+#
+# On the CRB-2S the PHYs for both nodes are connect to node 0
+# Setup the status lights for the PHYs
+# CPU0 SFP+
+BRD-CFG-MDIO-WRITE-0=45,0,1,1,0,0x010c,0xB610
+BRD-CFG-MDIO-WRITE-1=45,0,1,1,0,0x010d,0x0012
+BRD-CFG-MDIO-WRITE-2=45,0,1,1,0,0x0110,0x0000
+BRD-CFG-MDIO-WRITE-3=45,0,1,1,0,0x0111,0x0000
+# CPU0 QSFP+
+BRD-CFG-MDIO-WRITE-4=45,0,1,0,0,0x0106,0x6610
+BRD-CFG-MDIO-WRITE-5=45,0,1,0,0,0x0107,0x0012
+BRD-CFG-MDIO-WRITE-6=45,0,1,0,0,0x010a,0x0000
+BRD-CFG-MDIO-WRITE-7=45,0,1,0,0,0x010b,0x0000
+# CPU1 SFP+
+BRD-CFG-MDIO-WRITE-8=45,0,1,1,0,0x0106,0x6610
+BRD-CFG-MDIO-WRITE-9=45,0,1,1,0,0x0107,0x0032
+BRD-CFG-MDIO-WRITE-10=45,0,1,1,0,0x010a,0x0000
+BRD-CFG-MDIO-WRITE-11=45,0,1,1,0,0x010b,0x0000
+
