Copy the diagnostics app into apps/diagnostics
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125825 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -2,7 +2,10 @@
 .PHONY: all
 all:
 	${MAKE} -C boot
+	${MAKE} -C diagnostics
 
 .PHONY: clean
 clean:
 	${MAKE} -C boot clean
+	${MAKE} -C diagnostics clean
+
