Copy the init app into apps/init
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125826 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -3,9 +3,11 @@
 all:
 	${MAKE} -C boot
 	${MAKE} -C diagnostics
+	${MAKE} -C init
 
 .PHONY: clean
 clean:
 	${MAKE} -C boot clean
 	${MAKE} -C diagnostics clean
+	${MAKE} -C init clean
 
