Add new board 'inv-p3e003', which is the Inventec 2 socket board with DDR3
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125904 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/Makefile
+++ b/boards/Makefile
@@ -9,6 +9,7 @@ BOARDS+=crb-2s
 BOARDS+=ebb8604
 BOARDS+=ebb8800
 BOARDS+=ebb8804
+BOARDS+=inv-p3e003
 BOARDS+=screen-ebb8604
 BOARDS+=screen-ebb8800
 BOARDS+=screen-ebb8804
