Add config option to test DRAM on boot. Test each node independently so we can tell which one has trouble.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@125949 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/crb-2s/default.cfg
+++ b/boards/crb-2s/default.cfg
@@ -76,6 +76,8 @@ QLM.TUNING.TX_PREMPTAP.N1.QLM7=192
 
 DDR.SPEED.UDIMM=1066666666
 DDR.SPEED.RDIMM=940000000
+# Test DRAM on each node during boot
+DRAM-TEST-BOOT=1
 
 BGX.ENABLE.N0.BGX0.P1=0
 BGX.ENABLE.N0.BGX0.P2=0
