Rename ddr_100mhz_refclk to DDR-ALT-REFCLK.N* and use the bdk-env functions. This allows a board to specify an alternative reference clock at any speed for DRAM use. Add placeholder entries to our boards so it is obvious how to use the new parameter. Right now no boards use the alternate clock without changing the default.cfg file.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@126341 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/crb-2s/default.cfg
+++ b/boards/crb-2s/default.cfg
@@ -76,6 +76,8 @@ QLM.TUNING.TX_PREMPTAP.N1.QLM7=192
 
 DDR.SPEED.UDIMM=1066666666
 DDR.SPEED.RDIMM=940000000
+# Set to use a 100Mhz alternate reference clock
+#DDR-ALT-REFCLK=100
 # Test DRAM on each node during boot
 DRAM-TEST-BOOT=1
 
