--- a/boards/ebb8604/default.cfg
+++ b/boards/ebb8604/default.cfg
@@ -32,6 +32,8 @@ BRD.CFG.MULTI_NODE=0
 
 BRD.CFG.QLM_MODE_AUTO_CONFIG=1
 BRD.CFG.DRAM.N0=ebb8604
+# Set to use a 100Mhz alternate reference clock
+#DDR-ALT-REFCLK=100
 
 QLM.CLK.N0.QLM0=1
 QLM.CLK.N0.QLM1=1
