--- a/boards/ebb8800/default.cfg
+++ b/boards/ebb8800/default.cfg
@@ -33,6 +33,8 @@ BRD.CFG.MULTI_NODE=2
 BRD.CFG.QLM_MODE_AUTO_CONFIG=1
 BRD.CFG.DRAM.N0=ebb8800
 BRD.CFG.DRAM.N1=ebb8800
+# Set to use a 100Mhz alternate reference clock
+#DDR-ALT-REFCLK=100
 
 QLM.CLK.N0.QLM0=1
 QLM.CLK.N0.QLM1=1
