Create the beginnings of a new app for setup menus. All menus currently do nothing. They are placeholders to be filled in later.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@126539 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -4,10 +4,12 @@ all:
 	${MAKE} -C boot
 	${MAKE} -C diagnostics
 	${MAKE} -C init
+	${MAKE} -C setup
 
 .PHONY: clean
 clean:
 	${MAKE} -C boot clean
 	${MAKE} -C diagnostics clean
 	${MAKE} -C init clean
+	${MAKE} -C setup clean
 
