Add MDIO writes to reset line side of PHYs on the CRB-1S. This is needed to get copper cables to work with the Cortine PHY image. Without this you must unplug and plug the cables on every boot.
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@126840 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/crb-1s/default.cfg
+++ b/boards/crb-1s/default.cfg
@@ -83,3 +83,59 @@ BRD-CFG-TWSI-WRITE-1=-1,0,0x20,0x7,1,1,0x77
 BRD-CFG-TWSI-WRITE-2=-1,0,0x20,0x2,1,1,0x70
 BRD-CFG-TWSI-WRITE-3=-1,0,0x20,0x3,1,1,0x00
 
+# MDIO write format:
+# clause,node,bus_id,phy_id,device,location,val
+# clause = MDIO clause for the write (22 or 45)
+# node = ThunderX node the MDIO bus is connected, -1 for local
+# bus_id = ThunderX MDIO bus to use
+# phy_id = MDIO address
+# device = Clause 45 internal device address, zero for clause 22
+# location = MDIO register
+# val = Value to write
+#
+# The Cortina PHY shows up on MDIO bus 1, PHY address 0 and 1. Each PHY is
+# divided into 4 slices, one per SERDES lane. The 40G port uses all slices,
+# where the 10G ports use one slice each. PHY Internal address is always
+# zero.
+# XLAUI0: Slice 0-3 of PHY address 1 (reg through reg + 0x3000)
+# XFI1.0: Slice 3 of PHY address 0 (reg + 0x3000)
+# XFI1.1: Slice 2 of PHY address 0 (reg + 0x2000)
+#
+# Reset the line side of the PHY. This is register 0x1000, which is
+# incremented by 0x1000 for each slice.
+# Reset the host side of the PHY. This is register 0x1800, which is
+# incremented by 0x1000 for each slice.
+# XLAUI0, all 4 slices
+BRD-CFG-MDIO-WRITE-0=45,0,1,1,0,0x1000,0x3
+BRD-CFG-MDIO-WRITE-1=45,0,1,1,0,0x1800,0x3
+BRD-CFG-MDIO-WRITE-2=45,0,1,1,0,0x2000,0x3
+BRD-CFG-MDIO-WRITE-3=45,0,1,1,0,0x2800,0x3
+BRD-CFG-MDIO-WRITE-4=45,0,1,1,0,0x3000,0x3
+BRD-CFG-MDIO-WRITE-5=45,0,1,1,0,0x3800,0x3
+BRD-CFG-MDIO-WRITE-6=45,0,1,1,0,0x4000,0x3
+BRD-CFG-MDIO-WRITE-7=45,0,1,1,0,0x4800,0x3
+# XFI1.0, slice 3
+BRD-CFG-MDIO-WRITE-8=45,0,1,0,0,0x4000,0x3
+BRD-CFG-MDIO-WRITE-9=45,0,1,0,0,0x4800,0x3
+# XFI1.1, slice 2
+BRD-CFG-MDIO-WRITE-10=45,0,1,0,0,0x3000,0x3
+BRD-CFG-MDIO-WRITE-11=45,0,1,0,0,0x3800,0x3
+# Leave PHY in reset for 100ms
+BRD-CFG-MDIO-WRITE-6=sleep,100
+#
+# Take the line side out of reset
+BRD-CFG-MDIO-WRITE-12=45,0,1,1,0,0x1000,0
+BRD-CFG-MDIO-WRITE-13=45,0,1,1,0,0x1800,0
+BRD-CFG-MDIO-WRITE-14=45,0,1,1,0,0x2000,0
+BRD-CFG-MDIO-WRITE-15=45,0,1,1,0,0x2800,0
+BRD-CFG-MDIO-WRITE-16=45,0,1,1,0,0x3000,0
+BRD-CFG-MDIO-WRITE-17=45,0,1,1,0,0x3800,0
+BRD-CFG-MDIO-WRITE-18=45,0,1,1,0,0x4000,0
+BRD-CFG-MDIO-WRITE-19=45,0,1,1,0,0x4800,0
+# XFI1.0, slice 3
+BRD-CFG-MDIO-WRITE-20=45,0,1,0,0,0x4000,0
+BRD-CFG-MDIO-WRITE-21=45,0,1,0,0,0x4800,0
+# XFI1.1, slice 2
+BRD-CFG-MDIO-WRITE-22=45,0,1,0,0,0x3000,0
+BRD-CFG-MDIO-WRITE-23=45,0,1,0,0,0x3800,0
+
