--- a/boards/crb-1s/default.cfg
+++ b/boards/crb-1s/default.cfg
@@ -1,4 +1,4 @@
-# Valid mode strings for QLM.MODE configuration:
+# Valid mode strings for QLM-MODE configuration:
 #
 #    DISABLED      /* QLM is disabled */
 #    PCIE_1X1      /* 1 PCIe, 1 lane. Other lanes unused */
@@ -19,40 +19,40 @@
 #    10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
 #    40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
 #
-# Valid modes for QLM.CLK configuration:
+# Valid modes for QLM-CLK configuration:
 #
 #    0      /* common clock 0 */
 #    1      /* common clock 1 */
 #    2      /* use external clock */
 #
-BRD.CFG.BOARD=crb_1s
-BRD.CFG.BMC_TWSI=5
-BRD.CFG.MULTI_NODE=0
-BRD.CFG.WATCHDOG_TIMEOUT=0
-BRD.CFG.DRAM.N0=cn88xx-crb-1s
+BOARD-MODEL=crb_1s
+BMC-TWSI=5
+MULTI-NODE=0
+WATCHDOG-TIMEOUT=0
+DDR-CONFIG.N0=cn88xx-crb-1s
 
-QLM.MODE.N0.QLM0=XLAUI_1X4
-QLM.MODE.N0.QLM1=XFI_4X1
-QLM.MODE.N0.QLM2=PCIE_1X4
-QLM.MODE.N0.QLM3=SATA_4X1
-QLM.MODE.N0.QLM4=PCIE_1X8
-QLM.MODE.N0.QLM6=PCIE_1X8
-QLM.FREQ.N0.QLM0=10312
-QLM.FREQ.N0.QLM1=10312
-QLM.FREQ.N0.QLM2=8000
-QLM.FREQ.N0.QLM3=6000
-QLM.FREQ.N0.QLM4=8000
-QLM.FREQ.N0.QLM6=8000
+QLM-MODE.N0.QLM0=XLAUI_1X4
+QLM-MODE.N0.QLM1=XFI_4X1
+QLM-MODE.N0.QLM2=PCIE_1X4
+QLM-MODE.N0.QLM3=SATA_4X1
+QLM-MODE.N0.QLM4=PCIE_1X8
+QLM-MODE.N0.QLM6=PCIE_1X8
+QLM-FREQ.N0.QLM0=10312
+QLM-FREQ.N0.QLM1=10312
+QLM-FREQ.N0.QLM2=8000
+QLM-FREQ.N0.QLM3=6000
+QLM-FREQ.N0.QLM4=8000
+QLM-FREQ.N0.QLM6=8000
 
-QLM.CLK.N0=0
-QLM.CLK.N0.QLM0=1
-QLM.CLK.N0.QLM1=1
+QLM-CLK.N0=0
+QLM-CLK.N0.QLM0=1
+QLM-CLK.N0.QLM1=1
 
-DDR.SPEED.UDIMM=933333333
-DDR.SPEED.RDIMM=933333333
+DDR-SPEED-UDIMM=933333333
+DDR-SPEED-RDIMM=933333333
 
-BGX.ENABLE.N0.BGX1.P2=0
-BGX.ENABLE.N0.BGX1.P3=0
+BGX-ENABLE.N0.BGX1.P2=0
+BGX-ENABLE.N0.BGX1.P3=0
 
 # TWSI write format:
 # node,twsi_id,dev_addr,internal_addr,num_bytes,ia_width_bytes,data
@@ -72,16 +72,16 @@ BGX.ENABLE.N0.BGX1.P3=0
 #     Pin 1.3: SFP_TX_DISABLE_0
 #     Pin 1.7: SFP_TX_DISABLE_1
 #     Data high means pin is input
-BRD-CFG-TWSI-WRITE-0=-1,0,0x20,0x6,1,1,0x8f
-BRD-CFG-TWSI-WRITE-1=-1,0,0x20,0x7,1,1,0x77
+TWSI-WRITE-0=-1,0,0x20,0x6,1,1,0x8f
+TWSI-WRITE-1=-1,0,0x20,0x7,1,1,0x77
 # Drive output pins:
 #     Pin 0.4: QSFP_RST_N=1
 #     Pin 0.5: QSFP_MODSEL_N=1
 #     Pin 0.6: QSFP_LPMODE=1
 #     Pin 1.3: SFP_TX_DISABLE_0=0
 #     Pin 1.7: SFP_TX_DISABLE_1=0
-BRD-CFG-TWSI-WRITE-2=-1,0,0x20,0x2,1,1,0x70
-BRD-CFG-TWSI-WRITE-3=-1,0,0x20,0x3,1,1,0x00
+TWSI-WRITE-2=-1,0,0x20,0x2,1,1,0x70
+TWSI-WRITE-3=-1,0,0x20,0x3,1,1,0x00
 
 # MDIO write format:
 # clause,node,bus_id,phy_id,device,location,val
@@ -106,36 +106,42 @@ BRD-CFG-TWSI-WRITE-3=-1,0,0x20,0x3,1,1,0x00
 # Reset the host side of the PHY. This is register 0x1800, which is
 # incremented by 0x1000 for each slice.
 # XLAUI0, all 4 slices
-BRD-CFG-MDIO-WRITE-0=45,0,1,1,0,0x1000,0x3
-BRD-CFG-MDIO-WRITE-1=45,0,1,1,0,0x1800,0x3
-BRD-CFG-MDIO-WRITE-2=45,0,1,1,0,0x2000,0x3
-BRD-CFG-MDIO-WRITE-3=45,0,1,1,0,0x2800,0x3
-BRD-CFG-MDIO-WRITE-4=45,0,1,1,0,0x3000,0x3
-BRD-CFG-MDIO-WRITE-5=45,0,1,1,0,0x3800,0x3
-BRD-CFG-MDIO-WRITE-6=45,0,1,1,0,0x4000,0x3
-BRD-CFG-MDIO-WRITE-7=45,0,1,1,0,0x4800,0x3
+MDIO-WRITE-0=45,0,1,1,0,0x1000,0x3
+MDIO-WRITE-1=45,0,1,1,0,0x1800,0x3
+MDIO-WRITE-2=45,0,1,1,0,0x2000,0x3
+MDIO-WRITE-3=45,0,1,1,0,0x2800,0x3
+MDIO-WRITE-4=45,0,1,1,0,0x3000,0x3
+MDIO-WRITE-5=45,0,1,1,0,0x3800,0x3
+MDIO-WRITE-6=45,0,1,1,0,0x4000,0x3
+MDIO-WRITE-7=45,0,1,1,0,0x4800,0x3
 # XFI1.0, slice 3
-BRD-CFG-MDIO-WRITE-8=45,0,1,0,0,0x4000,0x3
-BRD-CFG-MDIO-WRITE-9=45,0,1,0,0,0x4800,0x3
+MDIO-WRITE-8=45,0,1,0,0,0x4000,0x3
+MDIO-WRITE-9=45,0,1,0,0,0x4800,0x3
 # XFI1.1, slice 2
-BRD-CFG-MDIO-WRITE-10=45,0,1,0,0,0x3000,0x3
-BRD-CFG-MDIO-WRITE-11=45,0,1,0,0,0x3800,0x3
+MDIO-WRITE-10=45,0,1,0,0,0x3000,0x3
+MDIO-WRITE-11=45,0,1,0,0,0x3800,0x3
 # Leave PHY in reset for 100ms
-BRD-CFG-MDIO-WRITE-12=sleep,100
+MDIO-WRITE-12=sleep,100
 #
 # Take the line side out of reset
-BRD-CFG-MDIO-WRITE-13=45,0,1,1,0,0x1000,0
-BRD-CFG-MDIO-WRITE-14=45,0,1,1,0,0x1800,0
-BRD-CFG-MDIO-WRITE-15=45,0,1,1,0,0x2000,0
-BRD-CFG-MDIO-WRITE-16=45,0,1,1,0,0x2800,0
-BRD-CFG-MDIO-WRITE-17=45,0,1,1,0,0x3000,0
-BRD-CFG-MDIO-WRITE-18=45,0,1,1,0,0x3800,0
-BRD-CFG-MDIO-WRITE-19=45,0,1,1,0,0x4000,0
-BRD-CFG-MDIO-WRITE-20=45,0,1,1,0,0x4800,0
+MDIO-WRITE-13=45,0,1,1,0,0x1000,0
+MDIO-WRITE-14=45,0,1,1,0,0x1800,0
+MDIO-WRITE-15=45,0,1,1,0,0x2000,0
+MDIO-WRITE-16=45,0,1,1,0,0x2800,0
+MDIO-WRITE-17=45,0,1,1,0,0x3000,0
+MDIO-WRITE-18=45,0,1,1,0,0x3800,0
+MDIO-WRITE-19=45,0,1,1,0,0x4000,0
+MDIO-WRITE-20=45,0,1,1,0,0x4800,0
 # XFI1.0, slice 3
-BRD-CFG-MDIO-WRITE-21=45,0,1,0,0,0x4000,0
-BRD-CFG-MDIO-WRITE-22=45,0,1,0,0,0x4800,0
+MDIO-WRITE-21=45,0,1,0,0,0x4000,0
+MDIO-WRITE-22=45,0,1,0,0,0x4800,0
 # XFI1.1, slice 2
-BRD-CFG-MDIO-WRITE-23=45,0,1,0,0,0x3000,0
-BRD-CFG-MDIO-WRITE-24=45,0,1,0,0,0x3800,0
+MDIO-WRITE-23=45,0,1,0,0,0x3000,0
+MDIO-WRITE-24=45,0,1,0,0,0x3800,0
+
+# BGX0 (QLM0) is QSFP on MDIO bus 1, address 1
+PHY-ADDRESS.N0.BGX0.P0=0x101
+# BGX1 (QLM1) is SFP on MDIO bus 1, address 0
+PHY-ADDRESS.N0.BGX1.P0=0x100
+PHY-ADDRESS.N0.BGX1.P1=0x100
 
