--- a/boards/crb-2s/default.cfg
+++ b/boards/crb-2s/default.cfg
@@ -1,4 +1,4 @@
-# Valid mode strings for QLM.MODE configuration:
+# Valid mode strings for QLM-MODE configuration:
 #
 #    DISABLED      /* QLM is disabled */
 #    PCIE_1X1      /* 1 PCIe, 1 lane. Other lanes unused */
@@ -19,44 +19,44 @@
 #    10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
 #    40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
 #
-# Valid modes for QLM.CLK configuration:
+# Valid modes for QLM-CLK configuration:
 #
 #    0      /* common clock 0 */
 #    1      /* common clock 1 */
 #    2      /* use external clock */
 #
-BRD.CFG.BOARD=crb_2s
-BRD.CFG.BMC_TWSI=1
-BRD.CFG.MULTI_NODE=1
-BRD.CFG.USB_PWR_GPIO=38
+BOARD-MODEL=crb_2s
+BMC-TWSI=1
+MULTI-NODE=1
+USB-PWR-GPIO=38
 # Watchdog is in milliseconds
-BRD.CFG.WATCHDOG_TIMEOUT=10000
-BRD.CFG.DRAM.N0=cn88xx-crb-2s-V3
-BRD.CFG.DRAM.N1=cn88xx-crb-2s-V3
+WATCHDOG-TIMEOUT=10000
+DDR-CONFIG.N0=cn88xx-crb-2s-V3
+DDR-CONFIG.N1=cn88xx-crb-2s-V3
 
-QLM.MODE.N0.QLM0=XFI_4X1
-QLM.MODE.N0.QLM1=XLAUI_1X4
-QLM.MODE.N0.QLM2=PCIE_1X4
-QLM.MODE.N0.QLM3=SATA_4X1
-QLM.MODE.N0.QLM4=PCIE_1X8
-QLM.MODE.N0.QLM6=PCIE_1X8
-QLM.FREQ.N0.QLM0=10312
-QLM.FREQ.N0.QLM1=10312
-QLM.FREQ.N0.QLM2=8000
-QLM.FREQ.N0.QLM3=6000
-QLM.FREQ.N0.QLM4=8000
-QLM.FREQ.N0.QLM6=8000
+QLM-MODE.N0.QLM0=XFI_4X1
+QLM-MODE.N0.QLM1=XLAUI_1X4
+QLM-MODE.N0.QLM2=PCIE_1X4
+QLM-MODE.N0.QLM3=SATA_4X1
+QLM-MODE.N0.QLM4=PCIE_1X8
+QLM-MODE.N0.QLM6=PCIE_1X8
+QLM-FREQ.N0.QLM0=10312
+QLM-FREQ.N0.QLM1=10312
+QLM-FREQ.N0.QLM2=8000
+QLM-FREQ.N0.QLM3=6000
+QLM-FREQ.N0.QLM4=8000
+QLM-FREQ.N0.QLM6=8000
 
-QLM.MODE.N1.QLM0=XFI_4X1
-QLM.MODE.N1.QLM3=SATA_4X1
-QLM.FREQ.N1.QLM0=10312
-QLM.FREQ.N1.QLM3=6000
+QLM-MODE.N1.QLM0=XFI_4X1
+QLM-MODE.N1.QLM3=SATA_4X1
+QLM-FREQ.N1.QLM0=10312
+QLM-FREQ.N1.QLM3=6000
 
-QLM.CLK.N0=0
-QLM.CLK.N0.QLM0=2
-QLM.CLK.N0.QLM1=2
+QLM-CLK.N0=0
+QLM-CLK.N0.QLM0=2
+QLM-CLK.N0.QLM1=2
 
-QLM.CLK.N1=2
+QLM-CLK.N1=2
 
 QLM.TUNING.TX_SWING.N0.QLM3=12
 QLM.TUNING.TX_SWING.N0.QLM6=12
@@ -74,19 +74,19 @@ QLM.TUNING.TX_PREMPTAP.N1.QLM3=192
 QLM.TUNING.TX_PREMPTAP.N1.QLM6=192
 QLM.TUNING.TX_PREMPTAP.N1.QLM7=192
 
-DDR.SPEED.UDIMM=1066666666
-DDR.SPEED.RDIMM=940000000
+DDR-SPEED-UDIMM=1066666666
+DDR-SPEED-RDIMM=940000000
 # Set to use a 100Mhz alternate reference clock
 #DDR-ALT-REFCLK=100
 # Test DRAM on each node during boot
 DRAM-TEST-BOOT=1
 
-BGX.ENABLE.N0.BGX0.P1=0
-BGX.ENABLE.N0.BGX0.P2=0
-BGX.ENABLE.N0.BGX0.P3=0
-BGX.ENABLE.N1.BGX0.P1=0
-BGX.ENABLE.N1.BGX0.P2=0
-BGX.ENABLE.N1.BGX0.P3=0
+BGX-ENABLE.N0.BGX0.P1=0
+BGX-ENABLE.N0.BGX0.P2=0
+BGX-ENABLE.N0.BGX0.P3=0
+BGX-ENABLE.N1.BGX0.P1=0
+BGX-ENABLE.N1.BGX0.P2=0
+BGX-ENABLE.N1.BGX0.P3=0
 
 # MDIO write format:
 # clause,node,bus_id,phy_id,device,location,val
@@ -101,18 +101,21 @@ BGX.ENABLE.N1.BGX0.P3=0
 # On the CRB-2S the PHYs for both nodes are connect to node 0
 # Setup the status lights for the PHYs
 # CPU0 SFP+
-BRD-CFG-MDIO-WRITE-0=45,0,1,1,0,0x010c,0xB610
-BRD-CFG-MDIO-WRITE-1=45,0,1,1,0,0x010d,0x0012
-BRD-CFG-MDIO-WRITE-2=45,0,1,1,0,0x0110,0x0000
-BRD-CFG-MDIO-WRITE-3=45,0,1,1,0,0x0111,0x0000
+MDIO-WRITE-0=45,0,1,1,0,0x010c,0xB610
+MDIO-WRITE-1=45,0,1,1,0,0x010d,0x0012
+MDIO-WRITE-2=45,0,1,1,0,0x0110,0x0000
+MDIO-WRITE-3=45,0,1,1,0,0x0111,0x0000
 # CPU0 QSFP+
-BRD-CFG-MDIO-WRITE-4=45,0,1,0,0,0x0106,0x6610
-BRD-CFG-MDIO-WRITE-5=45,0,1,0,0,0x0107,0x0012
-BRD-CFG-MDIO-WRITE-6=45,0,1,0,0,0x010a,0x0000
-BRD-CFG-MDIO-WRITE-7=45,0,1,0,0,0x010b,0x0000
+MDIO-WRITE-4=45,0,1,0,0,0x0106,0x6610
+MDIO-WRITE-5=45,0,1,0,0,0x0107,0x0012
+MDIO-WRITE-6=45,0,1,0,0,0x010a,0x0000
+MDIO-WRITE-7=45,0,1,0,0,0x010b,0x0000
 # CPU1 SFP+
-BRD-CFG-MDIO-WRITE-8=45,0,1,1,0,0x0106,0x6610
-BRD-CFG-MDIO-WRITE-9=45,0,1,1,0,0x0107,0x0032
-BRD-CFG-MDIO-WRITE-10=45,0,1,1,0,0x010a,0x0000
-BRD-CFG-MDIO-WRITE-11=45,0,1,1,0,0x010b,0x0000
+MDIO-WRITE-8=45,0,1,1,0,0x0106,0x6610
+MDIO-WRITE-9=45,0,1,1,0,0x0107,0x0032
+MDIO-WRITE-10=45,0,1,1,0,0x010a,0x0000
+MDIO-WRITE-11=45,0,1,1,0,0x010b,0x0000
+
+# BGX0 (QLM0) PHY addresses
+PHY-ADDRESS.N0.BGX0.P0=0xff012356
 
