--- a/boards/generic/default.cfg
+++ b/boards/generic/default.cfg
@@ -5,21 +5,21 @@
 # configuration.
 #
 
-BRD.CFG.BOARD=generic
+BOARD-MODEL=generic
 
 # Try to automatically detect multi-node
-BRD.CFG.MULTI_NODE=2
+MULTI-NODE=2
 
 # Cavium's recomendation is that common clock 0 is 100Mhz and common
 # clock 1 is 156.25Mhz. Setup the QLM reference clocks assuming this
 # recomendation was followed. The user can change this when configuring
 # the board. No other QLM configuration is done.
-QLM.CLK.N0.QLM0=1
-QLM.CLK.N0.QLM1=1
-QLM.CLK.N0.QLM2=0
-QLM.CLK.N0.QLM3=0
-QLM.CLK.N0.QLM4=0
-QLM.CLK.N0.QLM5=0
-QLM.CLK.N0.QLM6=0
-QLM.CLK.N0.QLM7=0
+QLM-CLK.N0.QLM0=1
+QLM-CLK.N0.QLM1=1
+QLM-CLK.N0.QLM2=0
+QLM-CLK.N0.QLM3=0
+QLM-CLK.N0.QLM4=0
+QLM-CLK.N0.QLM5=0
+QLM-CLK.N0.QLM6=0
+QLM-CLK.N0.QLM7=0
 
