--- a/boards/screen-ebb8800/default.cfg
+++ b/boards/screen-ebb8800/default.cfg
@@ -1,4 +1,4 @@
-# Valid mode strings for QLM.MODE configuration:
+# Valid mode strings for QLM-MODE configuration:
 #
 #    DISABLED      /* QLM is disabled */
 #    PCIE_1X1      /* 1 PCIe, 1 lane. Other lanes unused */
@@ -19,26 +19,53 @@
 #    10G_KR_4X1    /* 4 10GBASE-KR, 1 lane each */
 #    40G_KR4_1X4   /* 1 40GBASE-KR4, 4 lanes each */
 #
-# Valid modes for QLM.CLK configuration:
+# Valid modes for QLM-CLK configuration:
 #
 #    0      /* common clock 0 */
 #    1      /* common clock 1 */
 #    2      /* use external clock */
 #
-BRD.CFG.BOARD=ebb8800
+BOARD-MODEL=ebb8800
 
-BRD.CFG.BMC_TWSI=-1
-BRD.CFG.MULTI_NODE=0
+BMC-TWSI=-1
+MULTI-NODE=0
 
-BRD.CFG.QLM_MODE_AUTO_CONFIG=1
-BRD.CFG.DRAM.N0=ebb8800
-BRD.CFG.DRAM.N1=ebb8800
+QLM-AUTO-CONFIG=1
+DDR-CONFIG.N0=ebb8800
+DDR-CONFIG.N1=ebb8800
+# Set to use a 100Mhz alternate reference clock
+#DDR-ALT-REFCLK=100
 
-QLM.CLK.N0.QLM0=1
-QLM.CLK.N0.QLM1=1
-QLM.CLK.N0.QLM2=0
-QLM.CLK.N0.QLM3=0
-QLM.CLK.N0.QLM4=0
-QLM.CLK.N0.QLM5=0
-QLM.CLK.N0.QLM6=0
-QLM.CLK.N0.QLM7=0
+QLM-CLK.N0.QLM0=1
+QLM-CLK.N0.QLM1=1
+QLM-CLK.N0.QLM2=0
+QLM-CLK.N0.QLM3=0
+QLM-CLK.N0.QLM4=0
+QLM-CLK.N0.QLM5=0
+QLM-CLK.N0.QLM6=0
+QLM-CLK.N0.QLM7=0
+
+# When board is running as Node 0
+# BGX0 (QLM0) PHY addresses
+PHY-ADDRESS.N0.BGX0.P0=0xff000000
+PHY-ADDRESS.N0.BGX0.P1=0xff000001
+PHY-ADDRESS.N0.BGX0.P2=0xff000002
+PHY-ADDRESS.N0.BGX0.P3=0xff000003
+# BGX1 (QLM1) PHY addresses
+PHY-ADDRESS.N0.BGX1.P0=0xff000104
+PHY-ADDRESS.N0.BGX1.P1=0xff000105
+PHY-ADDRESS.N0.BGX1.P2=0xff000106
+PHY-ADDRESS.N0.BGX1.P3=0xff000107
+
+# When board is running as Node 1
+# BGX0 (QLM0) PHY addresses
+PHY-ADDRESS.N1.BGX0.P0=0xff000000
+PHY-ADDRESS.N1.BGX0.P1=0xff000001
+PHY-ADDRESS.N1.BGX0.P2=0xff000002
+PHY-ADDRESS.N1.BGX0.P3=0xff000003
+# BGX1 (QLM1) PHY addresses
+PHY-ADDRESS.N1.BGX1.P0=0xff000104
+PHY-ADDRESS.N1.BGX1.P1=0xff000105
+PHY-ADDRESS.N1.BGX1.P2=0xff000106
+PHY-ADDRESS.N1.BGX1.P3=0xff000107
+
