Update libfdt to compile cleanly in the BDK
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@127107 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/libbdk/Makefile
+++ b/libbdk/Makefile
@@ -18,6 +18,7 @@ dirs += libdram/configs
 dirs += libfatfs
 dirs += libbdk-bist
 dirs += libbdk-boot
+dirs += libfdt
 
 #
 # Create a list of all source files
