Move lua files into app/diagnostics and include them there. They are no longer board specific
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@127135 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/Makefile
+++ b/boards/Makefile
@@ -15,8 +15,7 @@ all:  $(DTB_FILES)
 	    -1 "$(BDK_ROOT)/apps/init/init.bin" \
 	    -2 "$(BDK_ROOT)/apps/diagnostics/diagnostics.bin" \
 	    -3 "$(BDK_ROOT)/apps/setup/setup.bin" \
-	    -c "$(DTB_FILES)" \
-	    -l "lua-common/*.lua"
+	    -c "$(DTB_FILES)"
 
 #
 # This assumes that all binaries in target-bin that match our naming
