--- a/apps/diagnostics/Makefile
+++ b/apps/diagnostics/Makefile
@@ -1,7 +1,7 @@
 include $(BDK_ROOT)/libbdk/bdk.mk
 
-diagnostics.bin: app.bin
-	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^
+diagnostics.bin: app.bin lua/*
+	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^ lua/*
 
 app: app.o $(BDK_ROOT)/libbdk/libbdk.a
 
