--- a/boards/generic.dts
+++ b/boards/generic.dts
@@ -36,7 +36,7 @@ cavium-bdk {
 	//BMC-TWSI = "-1";
 
 	/* This specifies a watchdog timer should run during boot and reset
-	the chip if boot hangs for soem reason. The timeout is specified
+	the chip if boot hangs for some reason. The timeout is specified
 	in milliseconds. Zero disables the watchdog. */
 	//WATCHDOG-TIMEOUT = "0";
 
@@ -67,11 +67,11 @@ cavium-bdk {
 	//MDIO-WRITE-%d = "";
 
 	/* PHY address encoding:
-	    Bits[31:24]: Node ID, 0xff for node the etherent device is on
+	    Bits[31:24]: Node ID, 0xff for node the ethernet device is on
 	    Bits[23:16]: Only used for TWSI
 	    Bits[15:12]: PHY connection type (0=MDIO, 1=Fixed, 2=TWSI)
 	For MDIO:
-	    Bits[31:24]: Node ID, 0xff for node the etherent device is on
+	    Bits[31:24]: Node ID, 0xff for node the ethernet device is on
 	    Bits[23:16]: 0
 	    Bits[15:12]: 0=MDIO
 	    Bits[11:8]: MDIO bus number
@@ -82,7 +82,7 @@ cavium-bdk {
 	    Bits[15:12]: 1=Fixed
 	    Bits[11:0]:  0 = 1Gb, 1 = 100Mb
 	For TWSI:
-	    Bits[31:24]: Node ID, 0xff for node the etherent device is on
+	    Bits[31:24]: Node ID, 0xff for node the ethernet device is on
 	    Bits[23:16]: TWSI internal address width in bytes (0-2)
 	    Bits[15:12]: 2=TWSI
 	    Bits[11:8]: TWSI bus number
