Hookup bdk-config to control DRAM MT/s
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@127144 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/generic.dts
+++ b/boards/generic.dts
@@ -189,10 +189,7 @@ cavium-bdk {
 	//DDR-CONFIG.N%d = "";
 
 	/* FIXME */
-	//DDR-SPEED-UDIMM.N%d = "0";
-
-	/* FIXME */
-	//DDR-SPEED-RDIMM.N%d = "0";
+	//DDR-SPEED.N%d = "0";
 
 	/* Set to use a an alternate reference clock for DRAM than the usual
 	50Mhz reference. The value of here specifies the frequency of the
