--- a/boards/crb-2s-evt3.dts
+++ b/boards/crb-2s-evt3.dts
@@ -3,8 +3,7 @@
 /include/ "crb-2s-common.dtsi"
 
 / {
-chosen {
-cavium-bdk {
+cavium,bdk {
 	/* The 100Mhz reference clock was only supported on the EVT4 and later
 	designs. Override the setting of DDR-ALT-REFCLK for the EVT2 and EVT3 */
 	DDR-ALT-REFCLK = "0";
@@ -15,7 +14,6 @@ cavium-bdk {
 	during boot. This should be used in combination with the watchdog
 	timer. */
 	DDR-TEST-BOOT = "1";
-};
 };
 };
 
