--- a/boards/crb-2s-common.dtsi
+++ b/boards/crb-2s-common.dtsi
@@ -1,6 +1,5 @@
 / {
-chosen {
-cavium-bdk {
+cavium,bdk {
 	/* THUNDERX TWSI port connected to the BMC for IPMI traffic.
 	-1 = No connection exists. 0+ is TWSI bus number. */
 	//BMC-TWSI = "1";
@@ -179,7 +178,6 @@ cavium-bdk {
 	during USB reset events. The default value assumes THUNDERX has no
 	control of the USB power and it is always on. */
 	USB-PWR-GPIO = "38";
-};
 };
 };
 
