--- a/boards/inv-p3e003.dts
+++ b/boards/inv-p3e003.dts
@@ -1,8 +1,7 @@
 /dts-v1/;
 
 / {
-chosen {
-cavium-bdk {
+cavium,bdk {
 	/* THUNDERX TWSI port connected to the BMC for IPMI traffic.
 	-1 = No connection exists. 0+ is TWSI bus number. */
 	//BMC-TWSI = "1";
@@ -145,7 +144,6 @@ cavium-bdk {
 	during USB reset events. The default value assumes THUNDERX has no
 	control of the USB power and it is always on. */
 	USB-PWR-GPIO = "38";
-};
 };
 };
 
