Correct error in device tree not enabling BMC communications on CRB-1S and CRB-2S
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@127151 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/crb-1s.dts
+++ b/boards/crb-1s.dts
@@ -4,7 +4,7 @@
 cavium,bdk {
 	/* THUNDERX TWSI port connected to the BMC for IPMI traffic.
 	-1 = No connection exists. 0+ is TWSI bus number. */
-	//BMC-TWSI = "5";
+	BMC-TWSI = "5";
 
 	/* Allow a sequence of TWSI writes to be performed during boot. Each
 	TWSI-WRITE-# line is executed in sequence starting with
