Allow setup to control the dram test on boot
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@127155 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/generic.dts
+++ b/boards/generic.dts
@@ -210,7 +210,7 @@ cavium,bdk {
 	with poor DRAM power supplies may use this to detect failures
 	during boot. This should be used in combination with the watchdog
 	timer. */
-	//DDR-TEST-BOOT.N%d = "0";
+	//DDR-TEST-BOOT = "0";
 
 	/* Specify a THUNDERX GPIO used to control power for a USB port. When
 	set, the USB host controller will toggle the GPIO automatically
